typo fix: inheri -> inherit

--- a/awesome-buttons.css
+++ b/awesome-buttons.css
@@ -24,7 +24,7 @@
   cursor: pointer !important; 
   font-style: normal !important; 
   font-weight: bold !important; 
-  font: inheri !important;
+  font: inherit !important;
   line-height: 1 !important; 
   position: relative !important; 
   text-align: cente !important;
